--- a/src/content/docs/Core/theming-color.mdx
+++ b/src/content/docs/Core/theming-color.mdx
@@ -1,8 +1,9 @@
 ---
-title: Example Reference
+title: Color reference
 description: A reference page in my new Starlight docs site.
 ---
 
 - [material-theme-builder](https://material-foundation.github.io/material-theme-builder/)
 - [how to read tokens](https://m3.material.io/foundations/design-tokens/how-to-read-tokens) 
 - [see tokens ](https://m3.material.io/styles/color/static/baseline#ac4485af-06a9-490b-8aa9-62ded55f7113)
+- [tailwind config theme](https://tailwindcss.com/docs/customizing-colors#using-css-variables)
