--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -1,36 +1,23 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
-template: splash
+title: TailM3
+description: Encuentra todos los componente de M3 en tu framework favorito TailwindCSS
+# template: splash
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Encuentra todos los componente de M3 en tu framework favorito TailwindCSS!
   image:
-    file: ../../assets/houston.webp
+    file: ../../assets/bg1.png
   actions:
-    - text: Example Guide
-      link: /guides/example/
-      icon: right-arrow
-      variant: primary
-    - text: Read the Starlight docs
-      link: https://starlight.astro.build
+    - text: Official MD3
+      link: https://m3.material.io/
       icon: external
+      variant: primary
 ---
 
-import { Card, CardGrid } from '@astrojs/starlight/components';
+
+
+
 
 ## Next steps
 
-<CardGrid stagger>
-	<Card title="Update content" icon="pencil">
-		Edit `src/content/docs/index.mdx` to see this page change.
-	</Card>
-	<Card title="Add new content" icon="add-document">
-		Add Markdown or MDX files to `src/content/docs` to create new pages.
-	</Card>
-	<Card title="Configure your site" icon="setting">
-		Edit your `sidebar` and other config in `astro.config.mjs`.
-	</Card>
-	<Card title="Read the docs" icon="open-book">
-		Learn more in [the Starlight Docs](https://starlight.astro.build/).
-	</Card>
-</CardGrid>
+
+
